base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: po1-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: po1-gateway
  template:
    metadata:
      labels:
        app: po1-gateway
    spec:
      containers:
      - name: po1-gateway
        imagePullPolicy: Always
        image: docker.io/kostiscodefresh/simple-env-app:1.0
        ports:
        - containerPort: 8080
